force-app/main/default/objects/Product2/fields/BillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>BillingPeriod__c</fullName>
    <label>Billing Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>