force-app/main/default/objects/Product2/fields/CheckoutCluster__c.field-meta.xml
<CustomField>
    <fullName>CheckoutCluster__c</fullName>
    <description>These picklist items reflect the structure of the checkout page.</description>
    <label>CheckoutCluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starter Package</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>