force-app/main/default/objects/Product2/fields/Covid_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Covid_Replacement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Covid Replacement</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Covid)</relationshipLabel>
    <relationshipName>ProductsCovid</relationshipName>
    <type>Lookup</type>
</CustomField>