force-app/main/default/objects/Product2/fields/DownshiftsTo__c.field-meta.xml
<CustomField>
    <fullName>DownshiftsTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Downshifts To</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Downshifts To)</relationshipLabel>
    <relationshipName>DSProducts</relationshipName>
    <type>Lookup</type>
</CustomField>