force-app/main/default/objects/Product2/fields/EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveEndDate__c</fullName>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>