force-app/main/default/objects/Product2/fields/invoice_test__c.field-meta.xml
<CustomField>
    <fullName>invoice_test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>test</description>
    <label>Invoice_test</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>