force-app/main/default/objects/Product2/fields/Lead_Source_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Restriction__c</fullName>
    <label>Lead Source Restriction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>