force-app/main/default/objects/Product2/fields/LicensedDevices__c.field-meta.xml
<CustomField>
    <fullName>LicensedDevices__c</fullName>
    <label>Licensed Devices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>