force-app/main/default/objects/Product2/fields/LocalizedAvailability__c.field-meta.xml
<CustomField>
    <fullName>LocalizedAvailability__c</fullName>
    <label>Localized Availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>