force-app/main/default/objects/Product2/fields/ManualDiscount__c.field-meta.xml
<CustomField>
    <fullName>ManualDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Discount</label>
    <type>Checkbox</type>
</CustomField>