force-app/main/default/objects/Product2/fields/Maximum_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Discount__c</fullName>
    <label>Maximum Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>