force-app/main/default/objects/Product2/fields/MINI_Eligible__c.field-meta.xml
<CustomField>
    <fullName>MINI_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MINI Eligible</label>
    <type>Checkbox</type>
</CustomField>