force-app/main/default/objects/Product2/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <label>MRR</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>