force-app/main/default/objects/Product2/fields/Onboarding_Status_Relevant__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status_Relevant__c</fullName>
    <description>Used in scirpt to update Onboarding Status on Account https://jira.orderbird.com/browse/CDS-2745</description>
    <formula>IF(CONTAINS(Name, &quot;Onboard&quot;) &amp;&amp; !CONTAINS(Name, &quot;Guest Management&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Status Relevant</label>
    <type>Checkbox</type>
</CustomField>