force-app/main/default/objects/Product2/fields/Price_EUR__c.field-meta.xml
<CustomField>
    <fullName>Price_EUR__c</fullName>
    <label>Price (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>