force-app/main/default/objects/Product2/fields/Product_Generation__c.field-meta.xml
<CustomField>
    <fullName>Product_Generation__c</fullName>
    <formula>ProductCategory__r.ProductGeneration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Generation</label>
    <type>Text</type>
</CustomField>