force-app/main/default/objects/Product2/fields/Product_Name_DE__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_DE__c</fullName>
    <label>Product Name de-DE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>