force-app/main/default/objects/Product2/fields/Product_Name_ES__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_ES__c</fullName>
    <label>Product Name es-ES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>