force-app/main/default/objects/Product2/fields/ProductGeneration__c.field-meta.xml
<CustomField>
    <fullName>ProductGeneration__c</fullName>
    <label>Product Generation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V_1</fullName>
                <label>V-1</label>
            </value>
            <value>
                <fullName>V0</fullName>
            </value>
            <value>
                <fullName>V1</fullName>
            </value>
            <value>
                <fullName>v2</fullName>
            </value>
            <value>
                <fullName>POS201609FR</fullName>
            </value>
            <value>
                <fullName>POS201708DEATCHFR (V2)</fullName>
            </value>
            <value>
                <fullName>POS201507DEATCHnewPrice (V1)</fullName>
            </value>
            <value>
                <fullName>POS201507DEATCHoldPrice (V0)</fullName>
            </value>
            <value>
                <fullName>POS201109DEATCH (V-1)</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>