force-app/main/default/objects/Product2/fields/QuoteBuilderNameOverride__c.field-meta.xml
<CustomField>
    <fullName>QuoteBuilderNameOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Builder Name Override</label>
    <type>Checkbox</type>
</CustomField>