force-app/main/default/objects/Product2/fields/RatePlanName__c.field-meta.xml
<CustomField>
    <fullName>RatePlanName__c</fullName>
    <label>Rate Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>