force-app/main/default/objects/Product2/fields/RecognizedRevenueAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>RecognizedRevenueAccountingCode__c</fullName>
    <label>Recognized Revenue Accounting Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>