force-app/main/default/objects/Product2/fields/RegionalAvailability__c.field-meta.xml
<CustomField>
    <fullName>RegionalAvailability__c</fullName>
    <label>Regional Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Universal</fullName>
                <default>true</default>
                <label>Universal</label>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>