force-app/main/default/objects/Product2/fields/RestartDiscount__c.field-meta.xml
<CustomField>
    <fullName>RestartDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restart Discount</label>
    <type>Checkbox</type>
</CustomField>