force-app/main/default/objects/Product2/fields/SpecificBillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>SpecificBillingPeriod__c</fullName>
    <label>Specific Billing Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>