force-app/main/default/objects/Product2/fields/TriggerEvent__c.field-meta.xml
<CustomField>
    <fullName>TriggerEvent__c</fullName>
    <label>Trigger Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>