force-app/main/default/objects/Product2/fields/UniqueSysRef__c.field-meta.xml
<CustomField>
    <fullName>UniqueSysRef__c</fullName>
    <label>System Reference</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>