force-app/main/default/objects/Product2/fields/VisibleToAcctMgmt__c.field-meta.xml
<CustomField>
    <fullName>VisibleToAcctMgmt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible to Acct Mgmt</label>
    <type>Checkbox</type>
</CustomField>