force-app/main/default/objects/Product2/fields/VisibleToAll__c.field-meta.xml
<CustomField>
    <fullName>VisibleToAll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible to All</label>
    <type>Checkbox</type>
</CustomField>