force-app/main/default/objects/Product2/fields/ZuoraSubCategoryId__c.field-meta.xml
<CustomField>
    <fullName>ZuoraSubCategoryId__c</fullName>
    <label>ZuoraSubCategoryId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>