force-app/main/default/objects/Product2/listViews/Active_Products.listView-meta.xml
<ListView>
    <fullName>Active_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>ProductType__c</columns>
    <columns>EffectiveStartDate__c</columns>
    <columns>EffectiveEndDate__c</columns>
    <columns>RatePlanName__c</columns>
    <columns>Price_EUR__c</columns>
    <columns>BillingPeriod__c</columns>
    <columns>UniqueSysRef__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Products</label>
</ListView>