force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>ProductCategory__c</columns>
    <columns>VisibleToAcctMgmt__c</columns>
    <columns>VisibleToAll__c</columns>
    <columns>EffectiveStartDate__c</columns>
    <columns>EffectiveEndDate__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DisplayName__c</field>
        <operation>contains</operation>
        <value>guest ma</value>
    </filters>
    <label>All Products</label>
</ListView>